24-May-2012 Michael Babker
+ Add the RSS Feed URL to the manager

23-May-2012 Michael Babker
# All of the plugins were missing method="upgrade"

--------------------------------------------------
Podcast Manager 2.0.0 - Released 23-May-2012
--------------------------------------------------
23-May-2012 Michael Babker
~ Update MediaElement.JS to 2.8.2

20-May-2012 Michael Babker
~ Only push through getID3 if the file actually exists and is local
~ Embrace the API - Use JAccess to get the component permissions

4-May-2012 Michael Babker
# Files linked off-site had improper URLs in Feed List

21-April-2012 Michael Babker
~ Update MediaElement.JS to 2.8.1

18-April-2012 Michael Babker
~ [#32] Change file selection popup to use details list

14-April-2012 Michael Babker
+ [#32] Add details list for File Manager

8-April-2012 Michael Babker
~ Set MIME type with getID3 instead of params
~ Use JSession::checkToken()
! Raise minimum version to Joomla! 2.5.4
# [#42] Change default ordering on feedname field

31-March-2012 Michael Babker
# Fix folder processing in File Manager views

26-March-2012 Michael Babker
+ [#37] Add ability to override player height and width in content plugin
+ Option to handle loading of jQuery with media player if need be

25-March-2012 Michael Babker
+ Add MediaElements.JS (2.7.0)
~ Upgrade script removes old media

24-March-2012 Michael Babker
- Remove support for QuickTime, XSPF Flash, and SoundManager2 players
~ Content plugin errors are logged versus displayed to users

23-March-2012 Michael Babker
- Remove Minima template overrides due to frozen development on the template :-(

26-February-2012 Michael Babker
+ [#23] Allow the media player in the feed listing module
~ Upgrade script removes old language files

4-February-2012 Michael Babker
+ [#37] Add ability to override player in content plugin

20-January-2012 Michael Babker
~ Update pt-BR translation

19-January-2012 Michael Babker
~ Restore J! Version check to component scriptfile for BC